--- a/models/staging/staging_sources.yml
+++ b/models/staging/staging_sources.yml
@@ -2,7 +2,7 @@ version: 2
 sources:
 
 - name: staging_weather
-  schema: c_svengiesbrecht
+  schema: s_svengiesbrecht
   tables:
     - name: weather_daily_raw
     - name: weather_hourly_raw
